# Strava-Data-Ingest-App

./: .gitignore  Dockerfile  README.md  architecture-diagram.excalidraw  exercise-data-app-architecture.excalidraw  lambda_handler.py  output.gpx  pyproject.toml
.github/workflows/: build-push-deploy.yml
lambdas/: lambda_handler.py
lambdas/callback/: handler.py
lambdas/health/: handler.py
lambdas/hello_world/: handler.py
lambdas/helpers/: asm.py  auth.py  ssm.py  strava.py  user.py
lambdas/my_lambda_1/: handler.py
lambdas/my_lambda_2/: handler.py
lambdas/webhook/: handler.py
scripts/: build.sh  deploy_all_lambdas.py
src/lambdas/: lambda_handler.py
src/lambdas/callback/: handler.py
src/lambdas/check_child_users/: handler.py
src/lambdas/check_duplication_status/: handler.py
src/lambdas/create_gpx_data/: handler.py
src/lambdas/delete_activity/: handler.py
src/lambdas/duplicate_activity/: handler.py
src/lambdas/health/: handler.py
src/utils/: boto3_singleton.py  gpx.py  requests_wrapper.py  ssm.py  strava.py  user.py
terraform/: apigateway.tf  dynamodb.tf  ecr.tf  eventbridge.tf  glue.tf  iam.tf  lambda.tf  main.tf  process_strava_data_sfn.asl.json  process_strava_data_sfn.json.tpl  s3.tf  sfn.tf  sqs.tf  ssm.tf  variables.tf
terraform/templates/: process_strava_data_sfn.json  process_strava_data_sfn.tpl
tests/: conftest.py  test_boto3_singleton.py  test_callback.py  test_health.py  test_lambda_handler.py  test_my_lambda_1.py  test_requests_wrapper.py  test_ssm.py  test_strava.py  test_user.py  test_webhook.py
(+7 files in other folders)
