[tool.poetry]
name = "strava-api-project"
version = "0.1.0"
description = ""
authors = ["Zach Drone <zvdrone@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.7"
aws-lambda-powertools = "^3.3.0"
boto3 = "^1.35.66"
aws-xray-sdk = "^2.14.0"
gpxpy = "^1.6.2"
requests = "^2.32.3"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
